[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/DeadScreen/DeadScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BlackBG.png" type="Texture" id=2]
[ext_resource path="res://Scenes/DeadScreen/ToMain-F.png" type="Texture" id=3]
[ext_resource path="res://Scenes/DeadScreen/ToMain.png" type="Texture" id=4]
[ext_resource path="res://Scenes/DeadScreen/Exit-F.png" type="Texture" id=5]
[ext_resource path="res://Scenes/DeadScreen/YouLost.png" type="Texture" id=6]
[ext_resource path="res://Scenes/DeadScreen/Exit.png" type="Texture" id=7]
[ext_resource path="res://Scenes/DeadScreen/Restart.png" type="Texture" id=8]
[ext_resource path="res://Scenes/DeadScreen/Restart-F.png" type="Texture" id=9]

[node name="DeadScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 540.0
margin_right = 740.0
margin_bottom = 620.0
size_flags_horizontal = 4
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 1000.0
margin_bottom = 190.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 257.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 83.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="MainMenuBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 200.0
margin_bottom = 170.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )

[node name="ExitBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 200.0
margin_bottom = 257.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
